[package]
name = "backrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4"
mongodb="2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
bcrypt = "0.8"
jsonwebtoken = "9.2.0"
chrono = "0.4.31"
futures-util = "0.3.29"
futures = "0.3"
actix-session = {version= "0.8.0", features = ["cookie-session"]}
actix-http = "3.4.0"
